apps/base/vaultwarden/rbac.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    toolkit.fluxcd.io/tenant: vaultwarden
  name: vaultwarden
