apps/base/vaultwarden/db_statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb-vaultwarden
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mariadb
  serviceName: mariadb
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mariadb
    spec:
      containers:
        - name: mariadb-vaultwarden
          image: mariadb:11.3
          ports:
            - containerPort: 3306
              name: db
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
          livenessProbe:
            exec:
              command:
                - bash
                - -c
                - mariadb-admin -uroot -p"$${MARIADB_ROOT_PASSWORD}" status
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
                - bash
                - -c
                - mariadb-admin -uroot -p"$${MARIADB_ROOT_PASSWORD}" status
            periodSeconds: 10
            failureThreshold: 12
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 20Gi
