apps/base/vaultwarden/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vaultwarden
  labels:
    app.kubernetes.io/name: vaultwarden
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: vaultwarden
  replicas: 1
  template:
    metadata:
      name: vaultwarden
      labels:
        app.kubernetes.io/name: vaultwarden
    spec:
      containers:
        - name: vaultwarden
          image: vaultwarden/server:1.37.1
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 300m
              memory: 1Gi
            requests:
              cpu: 50m
              memory: 256Mi
          volumeMounts:
            - name: vaultwarden
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /
              port: http
          livenessProbe:
            httpGet:
              path: /
              port: http
  volumeClaimTemplates:
    - metadata:
        name: vaultwarden
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 30Gi
  serviceName: vaultwarden
