apps/base/vaultwarden/db_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  labels:
    app.kubernetes.io/name: mariadb
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mariadb
  ports:
    - port: 3306
      targetPort: db
      protocol: TCP
