apps/base/vaultwarden/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: "Host(`${VAULTWARDEN_DOMAIN}`)"
      services:
        - name: vaultwarden
          port: 80
  tls:
    secretName: vaultwarden-certificate
